upload slides edm1015

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ author:
   email: sameer.bhatnagar@polymtl.ca 
   github: sameerbhatnagar
   bio: PhD student
+  disqus_shortname: sameerbhatnagarpolymtl
+  slideshare: http://www.slideshare.net/sameerbhatnagarpolymtl
 
 
 
