--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ excerpt_separator: <!--more-->  # you can specify your own separator
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+#relative_permalinks: true
 
 # Setup
 title:            
@@ -36,4 +36,4 @@ version:          2.1.0
 #github:
 #  repo:           https://github.com/sameerbhatnagar/
 
-
+gems: [jekyll-paginate]
